--- a/workshop.html
+++ b/workshop.html
@@ -1,4 +1,7 @@
 <h1> This is my first file <h1>
   
   
-  <p> Hey this is a new paragraph <p> 
+  <p> Hey this is a new paragraph <p>
+    
+    <p> change file a second time <p>git add .
+       
